added additional files

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -170,9 +170,11 @@
     <div>
       <a href="/"><i class="fas fa-home"></i> Home</a>
       <a href="/report"><i class="fas fa-info-circle"></i> Report</a>
-      <a href="/report"><i class="fas fa-envelope"></i> Contact Us</a>
-      <a href="/login"><i class="fas fa-sign-in-alt"></i> Login</a>
+      
       <a href="/diet"><i class="fas fa-calendar-alt"></i> Diet Plan</a>
+      <a href="/login"><i class="fas fa-sign-in-alt"></i> Login</a>
+      <a href="/submitnew"><i class="fas fa-envelope"></i> Contact Us</a>
+      
     </div>
     <button class="toggle-switch" onclick="toggleDarkMode()">
       <i class="fas fa-moon"></i> Toggle Dark Mode
