--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -35,7 +35,7 @@
         button {
             width: 100%;
             padding: 12px;
-            background-color: #27ae60;
+            background-color: #2874f0;
             color: #fff;
             border: none;
             border-radius: 8px;
